--- a/aclap/src/app/components/module-shared/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-shared/module-page/module-page.component.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="col-md-4 mb-3" style="height: 250px;">
-            <div class="card h-100 clickable button d-flex justify-content-center" [style.background-color]="module.color">
+            <div class="card h-100 clickable button d-flex justify-content-center" [style.background-color]="module.color" (click)="switchFiles()">
                 <h2 class="my-auto text-center">Material descargables</h2>
             </div>
         </div>
@@ -56,5 +56,8 @@
                 <h2 class="my-auto text-center">Implementá el módulo</h2>
             </div>
         </div>
+    </div>
+    <div class="div" *ngIf="showingFiles">
+        <app-display-files [files]="files"></app-display-files>
     </div>
 </div>
