--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -1,15 +1,6 @@
 
-<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url(https://images.unsplash.com/photo-1604390254113-b1b9e87bdf11?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=400&ixlib=rb-1.2.1&q=80&w=1280)'}">
-    <div class="d-none d-xl-block" style="height: 500px">
-    </div>
-    <div class="d-none d-lg-block" style="height: 400px">
-    </div>
-    <div class="d-none d-md-block" style="height: 350px">
-    </div>
-    <div class="d-none d-sm-block" style="height: 300px">
-    </div>
-    <div class="d-show d-sm-block" style="height: 200px">
-    </div>
+<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url(https://www.visitcentroamerica.com/wp-content/uploads/2018/01/ver-centroamerica-costa-rica-parque-nacional-chirripo-3.jpg)'}">
+
 </div>
 <div class="container">
     <div class="row row-content">
