--- a/aclap/src/app/components/module-shared/display/displayer/displayer.component.tns.scss
+++ b/aclap/src/app/components/module-shared/display/displayer/displayer.component.tns.scss
@@ -23,9 +23,28 @@ $l-grey: #d3d8d8;
     text-align: center;
 }
 
+.title-activity{
+    font-size: 18;
+    font-weight: bold;
+    color: #1c81a9;
+    text-align: center;
+}
+
+.text-time{
+    font-size: 12;
+    color: #596668;
+    text-align: center;
+}
+
 .subtitle-text{
     font-size: 18;
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: center;
+}
+
+.sub-subtitle-text{
+    font-size: 14;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
 }
