--- a/aclap/src/app/components/module-shared/module-page/module-page.component.tns.html
+++ b/aclap/src/app/components/module-shared/module-page/module-page.component.tns.html
@@ -13,7 +13,7 @@
             <Label text="Objetivo" class="title-text" textWrap="true"></Label>
             <Label text="{{ module.objective }}" textWrap="true"></Label>
             <Button text="Guía didáctica" class="my-button" (tap)="navigateToDisplayer(module.id)"></Button>
-            <Button text="Materiales de apoyo" class="my-button"></Button>
+            <Button text="Materiales de apoyo" class="my-button" (tap)="navigateToDisplayFiles(module.id)"></Button>
             <Button text="Implementa este módulo" class="my-button"></Button>
         </StackLayout>
     </ScrollView>
