--- a/aclap/src/app/components/profile-shared/profile/profile.component.tns.html
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.tns.html
@@ -14,7 +14,7 @@
             <ScrollView orientation="vertical"  height="1000">
                 <StackLayout orientation="vertical">
                     <StackLayout orientation="horizontal" backgroundColor="#1c81a9">
-                        <Image row="0" col="0" src="https://image.flaticon.com/icons/png/512/20/20863.png" class="user-img"></Image>
+                        <Image row="0" col="0" src="{{ user.imageUrl }}" class="user-img"></Image>
                         <Label row="0" col="1" text="{{ user.name }}" class="user-text"></Label>
                     </StackLayout>
                 </StackLayout>
