--- a/aclap/src/app/components/module-shared/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-shared/module-page/module-page.component.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div *ngIf="isEducator" class="col-md-4 mb-3" style="height: 250px;">
-            <div class="card h-100 clickable button d-flex justify-content-center" [style.background-color]="module.color"  [routerLink]="['/modulos',module.id,'implementacion']">
+            <div class="card h-100 clickable button d-flex justify-content-center" [style.background-color]="module.color"  [routerLink]="['/modulos',module.id,'nueva-implementacion']">
                 <h2 class="my-auto text-center">Implementá el módulo</h2>
             </div>
         </div>
