--- a/aclap/src/app/components/shared/footer/footer.component.html
+++ b/aclap/src/app/components/shared/footer/footer.component.html
@@ -1,3 +1,10 @@
+<div class="container">
+    <div class="row my-3 d-flex justify-content-center">
+        <div class="col-md-6">
+            <img class="img-fluid" src="../../../../assets/aliados.svg" />
+        </div>
+    </div>
+</div>
 <footer class="footer">
     <div class="container">
         <div class="row">             
@@ -5,7 +12,7 @@
                 <ul class="list-unstyled footer-text">
                     <!--TODO: USE THE ROUTER-->
                     <li><a [routerLink]="['/inicio']">Inicio</a></li>
-                    <li><a>Perfil</a></li>
+                    <li><a [routerLink]="['/perfil']">Perfil</a></li>
                     <li><a [routerLink]="['/modulos']">Módulos</a></li>
                     <li><a>Eventos</a></li>
                     <li><a>Acerca de</a></li>
@@ -14,21 +21,15 @@
             <div class="col-3 offset-xs-1 offset-sm-2 col-sm-3">
                 <!--TODO: USE THE ROUTER-->
                 <ul class="list-unstyled footer-text">
-                    <li><a>Persona Educadora</a></li>
-                    <li><a>Ingresar</a></li>
+                    <li><a [routerLink]="['/persona-educadora']">Persona Educadora</a></li>
+                    <li><a [routerLink]="['/login']">Ingresar</a></li>
                 </ul>
             </div>
             <div class="col-12 offset-xs-1 col-sm-4 align-self-center">
                 <h4 style="color: white;">Aliados</h4>
                 <!--TODO: Change for the ANGULAR EQUIVALENT with and ARRAY as a parameter-->
                 <ul class="list-unstyled footer-text">
-                    <li><a>MINAE</a></li>
-                    <li><a>SINAC</a></li>
-                    <li><a>ACLAP</a></li>
-                    <li><a>PAISAJES PRODUCTIVOS</a></li>
-                    <li><a>PNUD</a></li>
-                    <li><a>GEF</a></li>
-                    <li><a>TEC</a></li>
+                    <li *ngFor="let ally of allies"><a>{{ally}}</a></li>
                 </ul>
             </div>
        </div>
