score Assests and Major UI changes

--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -5,52 +5,13 @@
 <div class="container">
     <div class="row row-content">
         <div class="col-12">
-            <h1>Presentación</h1>
+            <h1>
+                Un poco de ACLA-P
+            </h1>
         </div>
-        <div class="col-12"> <!--CHANGE TO STRINGS FROM FIREBASE-->
-            <p>Pellentesque vitae ultricies purus, 
-                quis pretium tellus. Nam quis felis 
-                mi. Etiam ac lacinia dolor, eu egestas 
-                purus. Morbi quis nulla diam. Nullam 
-                magna magna, pharetra eu massa eget, 
-                fringilla vestibulum lorem. Duis blandit 
-                risus ex, nec gravida enim tincidunt 
-                eget. Aenean faucibus elit nibh, et 
-                ultricies libero efficitur efficitur. 
-                Etiam molestie placerat nulla, vitae 
-                euismod tellus porttitor sit amet. Duis 
-                sit amet lacus urna. Aliquam a tellus eu 
-                risus dictum faucibus eget suscipit 
-                turpis. Interdum et malesuada fames ac 
-                ante ipsum primis in faucibus. 
-                Pellentesque dignissim vitae nibh non 
-                facilisis. Phasellus auctor libero eget 
-                turpis vehicula lobortis. Fusce enim 
-                quam, facilisis nec consequat ut, egestas 
-                et augue. Proin ut ligula vel leo 
-                pellentesque fermentum in in purus.
-            </p>
-            <p>Pellentesque vitae ultricies purus, 
-                quis pretium tellus. Nam quis felis 
-                mi. Etiam ac lacinia dolor, eu egestas 
-                purus. Morbi quis nulla diam. Nullam 
-                magna magna, pharetra eu massa eget, 
-                fringilla vestibulum lorem. Duis blandit 
-                risus ex, nec gravida enim tincidunt 
-                eget. Aenean faucibus elit nibh, et 
-                ultricies libero efficitur efficitur. 
-                Etiam molestie placerat nulla, vitae 
-                euismod tellus porttitor sit amet. Duis 
-                sit amet lacus urna. Aliquam a tellus eu 
-                risus dictum faucibus eget suscipit 
-                turpis. Interdum et malesuada fames ac 
-                ante ipsum primis in faucibus. 
-                Pellentesque dignissim vitae nibh non 
-                facilisis. Phasellus auctor libero eget 
-                turpis vehicula lobortis. Fusce enim 
-                quam, facilisis nec consequat ut, egestas 
-                et augue. Proin ut ligula vel leo 
-                pellentesque fermentum in in purus.
+        <div class="col-12">
+            <p>
+                {{initial_message}}
             </p>
         </div>
     </div>
