--- a/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
+++ b/aclap/src/app/components/module-shared/module-edit/module-edit.component.html
@@ -16,6 +16,9 @@
             <!-- LEFT ROW  -->
             <div class="container">
                 <div class="row justify-content-center">
+                    <div class="col-12">
+                        <h2 class="card-header">Material descargable del módulo</h2>
+                    </div>
                     <div class="col-12 col-xl-10">
                         <app-edit-files [files]="files" [moduleFiles]="moduleFiles" [deletedModuleFiles]="deletedModuleFiles"></app-edit-files>
                     </div>
