--- a/aclap/src/app/components/module-shared/create-module/create-module.component.html
+++ b/aclap/src/app/components/module-shared/create-module/create-module.component.html
@@ -18,6 +18,9 @@
             <!-- LEFT ROW  -->
             <div class="container">
                 <div class="row justify-content-center">
+                    <div class="col-12">
+                        <h2 class="card-header">Material descargable del módulo</h2>
+                    </div>
                     <div class="col-12 col-xl-10">
                         <app-edit-files [files]="files" ></app-edit-files>
                     </div>
