--- a/aclap/src/app/components/profile-shared/implementation-page/implementation-page.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-page/implementation-page.component.html
@@ -40,4 +40,18 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-7">
+            <div class="col-12">
+                <h3>Preguntas de evaluación</h3>
+            </div>
+            <div class="col">
+                
+            </div>
+        </div>
+        <div class="col-md-5">
+            <h3> Evidencias de trabajo </h3>
+        </div>
+        <app-edit-files [files]="files"></app-edit-files>
+    </div>
 </div>
