Avances de iteracion 2, perfil, login, registro para ser educador

--- a/aclap/src/app/components/app.component.tns.html
+++ b/aclap/src/app/components/app.component.tns.html
@@ -44,7 +44,7 @@
         <StackLayout orientation="horizontal" width="245" height="100">
           <Label text="Ingresar" horizontalAlignment="left" color="white" (tap)="navigateToLogin()"></Label>
           <Label text="       " horizontalAlignment="center"></Label>
-          <Label text="Ser educador" horizontalAlignment="right" color="white"></Label>
+          <Label text="Ser educador" horizontalAlignment="right" color="white" (tap)="navigateToEducatorApplication()"></Label>
       </StackLayout>
       </StackLayout>
 
