--- a/aclap/src/app/components/home/home.component.tns.scss
+++ b/aclap/src/app/components/home/home.component.tns.scss
@@ -10,12 +10,14 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: center;
+    margin-top: 10;
 }
 
 .text{
     font-size: 12;
     color: rgb(0, 0, 0);
-    text-align: center;
+    margin-left: 10;
+    margin-right: 10;
 }
 
 .welcome-img{
