--- a/aclap/src/app/components/module-shared/display/display-files/display-files.component.tns.scss
+++ b/aclap/src/app/components/module-shared/display/display-files/display-files.component.tns.scss
@@ -21,6 +21,7 @@ $l-grey: #d3d8d8;
     font-weight: bold;
     color: #1c81a9;
     text-align: center;
+    margin-top: 20;
 }
 
 .header-text{
@@ -39,4 +40,6 @@ $l-grey: #d3d8d8;
 .download-img{
     height: 50;
     width: 50;
+    margin-top: 5;
+    margin-left: 20;
 }
