--- a/aclap/src/app/components/shared/login/login.component.tns.html
+++ b/aclap/src/app/components/shared/login/login.component.tns.html
@@ -6,4 +6,10 @@
         <TextField formControlName="password" hint="Contraseña" secure="true" class="input input-border input-login"></TextField>
         <Button text="Ingresar" class="btn btn-primary btn-login"></Button>
     </form>
+    <Label class="center">
+        <FormattedString>
+          <Span text="Olvidó su contraseña? "class="password-recov-text"></Span>
+          <Span text="Presione aquí" class="password-recov-text-link"></Span>
+        </FormattedString>
+    </Label>
 </StackLayout>
