--- a/aclap/src/app/components/profile-shared/profile/profile.component.tns.scss
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.tns.scss
@@ -34,12 +34,12 @@ $l-grey: #d3d8d8;
 }
 
 .user-text{
-    font-size: 14;
+    font-size: 20;
     font-weight: bold;
     color: rgb(255, 255, 255);
     text-align: center;
-    margin-top: 17;
-    margin-left: 5;
+    margin-left: 10;
+    margin-top: 8;
 }
 
 .user-img{
@@ -48,6 +48,13 @@ $l-grey: #d3d8d8;
     border-radius: 50%;
     margin: 5;
 }
+
+.btn-logout {
+    color: #ffffff;
+    background-color: #Ef6423;
+    font-size: 12;
+    height: 40;
+  }
 
 TabStripItem {
     font-size: 12;
