--- a/aclap/src/app/components/module-shared/edit/edit-questions/edit-questions.component.html
+++ b/aclap/src/app/components/module-shared/edit/edit-questions/edit-questions.component.html
@@ -16,33 +16,33 @@
                 </div>
             </div>
             <div class="row offset-1">
-                <div class="col-2">
-                    <div class="col-12">Muy bajo</div>
-                    <div class="form-group col-12">
+                <div class="col-2 no-padding">
+                    <div class="col-12 no-padding">Muy bajo</div>
+                    <div class="form-group col-12 no-padding">
                         <textarea class="form-control" formControlName="v_low" rows="4" [(ngModel)]="options[0]"></textarea>
                     </div>
                 </div>
-                <div class="col-2">
-                    <div class="col-12">Bajo</div>
-                    <div class="form-group col-12">
+                <div class="col-2 no-padding">
+                    <div class="col-12 no-padding">Bajo</div>
+                    <div class="form-group col-12 no-padding">
                         <textarea class="form-control" formControlName="low" rows="4" [(ngModel)]="options[1]" ></textarea>
                     </div>
                 </div>
-                <div class="col-2">
-                    <div class="col-12">Medio</div>
-                    <div class="form-group col-12">
+                <div class="col-2 no-padding">
+                    <div class="col-12 no-padding">Medio</div>
+                    <div class="form-group col-12 no-padding">
                         <textarea class="form-control" formControlName="average" rows="4" [(ngModel)]="options[2]" ></textarea>
                     </div>
                 </div>
-                <div class="col-2">
-                    <div class="col-12">Alto</div>
-                    <div class="form-group col-12">
+                <div class="col-2 no-padding">
+                    <div class="col-12 no-padding">Alto</div>
+                    <div class="form-group col-12 no-padding">
                         <textarea class="form-control" formControlName="high" rows="4" [(ngModel)]="options[3]"></textarea>
                     </div>
                 </div>
-                <div class="col-2">
-                    <div class="col-12">Muy alto</div>
-                    <div class="form-group col-12">
+                <div class="col-2 no-padding">
+                    <div class="col-12  no-padding">Muy alto</div>
+                    <div class="form-group col-12 no-padding">
                         <textarea class="form-control" formControlName="v_high" rows="4" [(ngModel)]="options[4]"></textarea>
                     </div>
                 </div>
