--- a/aclap/src/app/components/profile-shared/implementation-page/implementation-page.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-page/implementation-page.component.html
@@ -41,10 +41,10 @@
         <div class="col-sm col-xl">
             <div class="row">
                 <div class="col-6">
-                    <button class="btn btn-success btn-sm col-12">Guardar Cambios</button>
+                    <button class="btn btn-success btn-sm col-12" (click)="onSubmit()">Guardar Cambios</button>
                 </div>
                 <div class="col-6">
-                    <button class="btn btn-warning btn-sm col-12">Confirmar implementación</button>
+                    <button class="btn btn-warning btn-sm col-12" (click)="onComplete()" >Confirmar implementación</button>
                 </div>
             </div>
             <div class="row">
